# EILS

./: LICENSE  README.md  cfsdp_demo.ipynb  demo.ipynb  dirchlet_AND_agglomerative_demo.ipynb  environment.yml  pyproject.toml
dataset/: Ag_features_normalised.csv  ND_finalClusters.csv
ils/: agglomerativeClustering.py  basic_ils.py  cfsdp.py  dirichletMixtures.py  requirements.py  utils.py
