[tool.poetry]
name = "Enhanced ILS"
version = "0.1.0"
description = "Fast Parameter-free Clustering using Enhanced Iterative Label Spreading"
authors = ["Xinyue XU <xinyuexu1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
sklearn = "^0.0"
scipy = "1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
